--- a/Títulos/Titulos.html
+++ b/Títulos/Titulos.html
@@ -15,7 +15,11 @@
         <header>
             <h1>Títulos</h1>
         </header>
-        <nav></nav>
+        <nav>
+            <a style="color: goldenrod;" href="../historia.html">História</a> ||
+            <a style="color: goldenrod;" href="../Ídolos/idolos.html">Ídolos</a> ||
+            <a style="color: goldenrod;" href="../Títulos/Titulos.html">Títulos</a> ||
+        </nav>
         <main>
             <hr>
             <table>
