--- a/Títulos/Titulos.html
+++ b/Títulos/Titulos.html
@@ -13,21 +13,26 @@
     </head>
     <body>
         <header>
-            <h1>Títulos</h1>
+            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>
+            <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <nav>
             <a style="color: goldenrod;" href="../historia.html">História</a> ||
             <a style="color: goldenrod;" href="../Ídolos/idolos.html">Ídolos</a> ||
             <a style="color: goldenrod;" href="../Títulos/Titulos.html">Títulos</a> ||
+            <a style="color: goldenrod;" href="../Hino/Hino.html">Hino</a> ||
         </nav>
         <main>
+            <hr>
+            <h2>TÍTULOS</h2>
             <hr>
             <table>
                 <thead>
                     <tr>
-                        <th>Competições</th>
-                        <th>Títulos</th>
-                        <th>Temporadas</th>
+                        <th style="color: #cd0000">Competições</th>
+                        <th style="color: #cd0000;">Títulos</th>
+                        <th style="color: #cd0000;">Temporadas</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -103,7 +108,8 @@
                     </tr>
                 </tbody>
             </table>
-            <hr>
         </main>
+        <aside>Um sumário da página</aside>
+        <footer>Todos os direitos reservados.2023</footer>
     </body>
 </html>
