--- a/historia.html
+++ b/historia.html
@@ -11,14 +11,16 @@
     </head>
     <body>
         <header>
-            <img src="Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>            
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+            <img src="Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>            
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <main>
             <nav>
                 <a style="color: goldenrod;" href="historia.html">História</a> ||
-                <a style="color: goldenrod;" href="idolos.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="Ídolos/idolos.html">Títulos</a> ||
+                <a style="color: goldenrod;" href="Títulos/Titulos.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="Hino/Hino.html">Hino</a> ||
             </nav>
             <hr>
         <section>
