--- a/Ídolos/idolos1.html
+++ b/Ídolos/idolos1.html
@@ -14,17 +14,14 @@
         </style>
     </head>
     <body>
-        <header>
-            <img src="Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" alt="nao carregou" title="curinthia" width="350">
-            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <h2 style="color:red;">"Sempre Altaneiro"</h2>
-        </header>
+        <nav>
+            <a style="color: goldenrod;" href="historia.html">História</a> ||
+            <a style="color: goldenrod;" href="Ídolos/idolos.html">Ídolos</a> ||
+            <a style="color: goldenrod;" href="Títulos/Titulos.html">Títulos</a> ||
+            <a style="color: goldenrod;" href="Hino/Hino.html">Hino</a> ||
+        </nav>
         <main>
-            <nav>
-                <a style="color: goldenrod;" href="historia.html">Historia</a> ||
-                <a style="color: goldenrod;" href="idolos.html">Ídolos</a> ||
-                <hr>
-            </nav>
+            
             <section>
                 <article>
                     <h2>MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
