--- a/historia.html
+++ b/historia.html
@@ -7,6 +7,9 @@
             p {
                 font-size:larger
             }
+            ul {
+                font-size:larger
+            }
         </style>
     </head>
     <body>
@@ -18,8 +21,8 @@
         <main>
             <nav>
                 <a style="color: goldenrod;" href="historia.html">História</a> ||
-                <a style="color: goldenrod;" href="Ídolos/idolos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="Títulos/Titulos.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="Ídolos/idolos.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="Títulos/Titulos.html">Títulos</a> ||
                 <a style="color: goldenrod;" href="Hino/Hino.html">Hino</a> ||
             </nav>
             <hr>
@@ -28,10 +31,30 @@
                 <h2>CRIAÇÃO</h2>
                 <hr>
                 <h1 style="color:#cd0000;">O TIME DO POVO</h1>
-                <img src="Imagens/simbolofundacao.jpg" title="timao" alt="nao carregou" width="350">
-                <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio e Raphael Perrone fundaram o Sport Club Corinthians Paulista. O nome foi inspirado no time  </p>
-
+                <img src="Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
+                <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio, Raphael Perrone e mais 8 sócios, fundaram o Sport Club Corinthians Paulista, o nome foi inspirado no time inglês, Corinthian-Casuals Football Club, que nessa ocasião estava fazendo uma expedição em São Paulo.</p>
+                <img src="Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
             </article>
+            <article>
+                <ul>
+                    <h2>Linha do Tempo</h2>
+                    <li>1910 - No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
+                    <li>1914 - Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
+                    <li>1918 - teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê. </li>
+                    <li>1930 - Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”. </li>
+                    <li>1977 - Após uma partida conta a Ponte Preta por 1x0, gol de Basílio, o Corinthians acaba com o jejum de 22 anos sem ganhar um título Paulista. </li>
+                    <li>1982 - O ano da Democracia Corintihiana, um dos movimentos mais importantes da história do clube alvinegro, visava maior participação dos jogadores e demais empregados do clube nas decisões do Departamento de Futebol.</li>
+                    <li>1990 - Conseguiu se primeiro título Brasileiro. </li>
+                    <li>2007 - Um dos anos mais tristes e importantes na história do clube, pois foi rebaixado para a série B, mas mesmo assim a torcida sempre estava ao lado do time apoiando. </li>
+                    <li>2008 - O Corinthians é campaão da série B e consegue o acesso para a 1º divisão. </li>
+                    <li> 2009 - Com a chegada de Ronaldo Fenômeno o Timão conquista um Campeonato Paulista e uma Copa do Beasil </li>
+                    <li>2010 - Ano do centenário do clube, onde 100 mil corinthianos lotaram o Anhangabaú para as comemorações de aniversário. </li>
+                    <li>2011 - Pentacampeão Brasileiro.</li>
+                    <li>2012 - Um dos anos mais inesquecíveis da história do clube, com a conquista invicta de sua primeira Libertadores e o BiMundial.</li>
+                    <li>2017 - Na primeira temporada de Fábio Carille como treinador corinthiano, o Timão conquistou o 28º título paulista e o 7º Brasileirão de sua história. Apontado como uma das equipes mais frágeis entre os grandes no início da temporada, o Timão venceu o torneio estadual após o eliminar o São Paulo nas semifinais e bater a Ponte Preta na decisão. </li>
+                </ul>
+            </article>
+                
         </section>
         </main>
         <aside>Um sumario da pagina</aside>
