--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -18,10 +18,10 @@
         </header>
         <main>
             <nav>
-                <a style="color: goldenrod;" href="../historia.html">História</a> ||
-                <a style="color: goldenrod;" href="../Ídolos/idolos.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="../Títulos/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="../Hino/Hino.html">Hino</a> ||
+                <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
             </nav>
             <hr>
             <section>
