--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -18,10 +18,10 @@
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <nav>
-            <a style="color: goldenrod;" href="../historia.html">História</a> ||
-            <a style="color: goldenrod;" href="../Ídolos/idolos.html">Ídolos</a> ||
-            <a style="color: goldenrod;" href="../Títulos/Titulos.html">Títulos</a> ||
-            <a style="color: goldenrod;" href="../Hino/Hino.html">Hino</a> ||
+            <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
         </nav>
         <main>
             <hr>
