--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -15,15 +15,15 @@
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>            
+            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>            
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <main>
             <nav>
-                <a style="color: goldenrod;" href="historia.html">História</a> ||
-                <a style="color: goldenrod;" href="Ídolos/idolos.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="Títulos/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="Hino/Hino.html">Hino</a> ||
+                <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
             </nav>
             <hr>
         <section>
@@ -31,9 +31,9 @@
                 <h2>CRIAÇÃO</h2>
                 <hr>
                 <h1 style="color:#cd0000;">O TIME DO POVO</h1>
-                <img src="Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
+                <img src="../Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
                 <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio, Raphael Perrone e mais 8 sócios, fundaram o Sport Club Corinthians Paulista, o nome foi inspirado no time inglês, Corinthian-Casuals Football Club, que nessa ocasião estava fazendo uma expedição em São Paulo.</p>
-                <img src="Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
+                <img src="../Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
             </article>
             <article>
                 <ul>
