--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>
+            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="500"/>
             <h2 style="color: red;">"Sempre Altaneiro"</h2>   
         </header>
         <main>
@@ -28,6 +28,7 @@
                 <article>
                     <h2>HINO</h2>
                     <hr>
+                    <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/>
                     <h1 style="color:#cd0000;">O PRIMEIRO HINO</h1>
                     <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
                     <P>Luctar… Luctar…<br>
@@ -64,7 +65,6 @@
                 </article>
             </section>
         </main>
-        <aside>Um sumário da página</aside>
-        <footer>Todos os direitos reservados.2023</footer>
+        <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
