--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -5,6 +5,9 @@
         <title>Site Corinthians</title>
         <style>
 
+            table {
+                width: 40%;
+            }
             table, th, tr, td {
                 border: 1px solid black
             }
@@ -14,7 +17,7 @@
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>
+            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="500"/>
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <nav>
@@ -25,8 +28,9 @@
         </nav>
         <main>
             <hr>
-            <h2>TÍTULOS</h2>
+            <h2>SALA DE TROFÉUS</h2>
             <hr>
+            <img src="../Imagens/saladetrofeusverdadeira.jpg" title="trofeus" alt="não carregou" width="500"/>
             <table>
                 <thead>
                     <tr>
@@ -109,7 +113,6 @@
                 </tbody>
             </table>
         </main>
-        <aside>Um sumário da página</aside>
-        <footer>Todos os direitos reservados.2023</footer>
+        <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
