--- a/paginas/idolos1.html
+++ b/paginas/idolos1.html
@@ -16,7 +16,7 @@
     <body>
         <header>    
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="400"/>            
+            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <nav>
@@ -89,7 +89,6 @@
                 </article>
             </section>
        </main>
-       <aside>Um sumario da pagina</aside>
-       <footer>Todos os direitos reservadod.2023</footer>
+       <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
