--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <nav>
-                <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+                || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
                 <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
                 <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
                 <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
@@ -44,6 +44,8 @@
                         E nós unidos sempre<br>
                         Elevaremos teu nome glorioso.</P>
                     <hr>
+                </article>
+                <article>
                     <h1 style="color: #cd0000;">HINO ATUAL</h1>
                     <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p> 
                     <p>Salve o Corinthians<br>
