--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -21,7 +21,7 @@
             <h2 style="color: red;">"Sempre Altaneiro"</h2>
         </header>
         <nav>
-            <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+            || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
             <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
             <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
             <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
