--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -20,7 +20,7 @@
         </header>
         <main>
             <nav>
-                <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+                || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
                 <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
                 <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
                 <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
@@ -37,21 +37,21 @@
             </article>
             <article>
                 <ul>
-                    <h2>Linha do Tempo</h2>
-                    <li>1910 - No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
-                    <li>1914 - Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
-                    <li>1918 - teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê. </li>
-                    <li>1930 - Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”. </li>
-                    <li>1977 - Após uma partida conta a Ponte Preta por 1x0, gol de Basílio, o Corinthians acaba com o jejum de 22 anos sem ganhar um título Paulista. </li>
-                    <li>1982 - O ano da Democracia Corintihiana, um dos movimentos mais importantes da história do clube alvinegro, visava maior participação dos jogadores e demais empregados do clube nas decisões do Departamento de Futebol.</li>
-                    <li>1990 - Conseguiu se primeiro título Brasileiro. </li>
-                    <li>2007 - Um dos anos mais tristes e importantes na história do clube, pois foi rebaixado para a série B, mas mesmo assim a torcida sempre estava ao lado do time apoiando. </li>
-                    <li>2008 - O Corinthians é campaão da série B e consegue o acesso para a 1º divisão. </li>
-                    <li> 2009 - Com a chegada de Ronaldo Fenômeno o Timão conquista um Campeonato Paulista e uma Copa do Beasil </li>
-                    <li>2010 - Ano do centenário do clube, onde 100 mil corinthianos lotaram o Anhangabaú para as comemorações de aniversário. </li>
-                    <li>2011 - Pentacampeão Brasileiro.</li>
-                    <li>2012 - Um dos anos mais inesquecíveis da história do clube, com a conquista invicta de sua primeira Libertadores e o BiMundial.</li>
-                    <li>2017 - Na primeira temporada de Fábio Carille como treinador corinthiano, o Timão conquistou o 28º título paulista e o 7º Brasileirão de sua história. Apontado como uma das equipes mais frágeis entre os grandes no início da temporada, o Timão venceu o torneio estadual após o eliminar o São Paulo nas semifinais e bater a Ponte Preta na decisão. </li>
+                    <h2><span style="color: #cd0000;">Linha do Tempo</span></h2>
+                    <li><span style="color: #cd0000;"> 1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
+                    <li><span style="color: #cd0000;">1914 -</span>Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
+                    <li><span style="color: #cd0000;">1918 -</span>teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê. </li>
+                    <li><span style="color: #cd0000;">1930 -</span> Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”. </li>
+                    <li><span style="color: #cd0000;">1977 -</span>Após uma partida conta a Ponte Preta por 1x0, gol de Basílio, o Corinthians acaba com o jejum de 22 anos sem ganhar um título Paulista. </li>
+                    <li><span style="color: #cd0000;">1982 -</span> O ano da Democracia Corintihiana, um dos movimentos mais importantes da história do clube alvinegro, visava maior participação dos jogadores e demais empregados do clube nas decisões do Departamento de Futebol.</li>
+                    <li><span style="color: #cd0000;">1990 -</span>Conseguiu se primeiro título Brasileiro. </li>
+                    <li><span style="color: #cd0000;">2007 -</span> Um dos anos mais tristes e importantes na história do clube, pois foi rebaixado para a série B, mas mesmo assim a torcida sempre estava ao lado do time apoiando. </li>
+                    <li><span style="color: #cd0000;">2008 -</span> O Corinthians é campaão da série B e consegue o acesso para a 1º divisão. </li>
+                    <li><span style="color: #cd0000;">2009 -</span> Com a chegada de Ronaldo Fenômeno o Timão conquista um Campeonato Paulista e uma Copa do Beasil </li>
+                    <li><span style="color: #cd0000;">2010 -</span> Ano do centenário do clube, onde 100 mil corinthianos lotaram o Anhangabaú para as comemorações de aniversário. </li>
+                    <li><span style="color: #cd0000;">2011 -</span> Pentacampeão Brasileiro.</li>
+                    <li><span style="color: #cd0000;">2012 -</span> Um dos anos mais inesquecíveis da história do clube, com a conquista invicta de sua primeira Libertadores e o BiMundial.</li>
+                    <li><span style="color: #cd0000;">2017 -</span> Na primeira temporada de Fábio Carille como treinador corinthiano, o Timão conquistou o 28º título paulista e o 7º Brasileirão de sua história. Apontado como uma das equipes mais frágeis entre os grandes no início da temporada, o Timão venceu o torneio estadual após o eliminar o São Paulo nas semifinais e bater a Ponte Preta na decisão. </li>
                 </ul>
             </article>
                 
