--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -15,15 +15,18 @@
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/b61e656b-7477-4582-9b0e-6e61af35abb8.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-            <h2 style="color: red;">"Sempre Altaneiro"</h2>
+            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
         </header>
         <main>
             <nav>
                 || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
+                    <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+                    <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+                    <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
+                    <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
+                    <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+                    <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
             </nav>
             <hr>
         <section>
