--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Hino teste</title>
+        <title>VAI CORINTHIANS</title>
 
         <style>
             p {
@@ -70,6 +70,7 @@
                 </article>
             </section>
         </main>
+        <hr>
         <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
