--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Site Corinthians</title>
+        <title>VAI CORINTHIANS</title>
         <style>
 
             table {
-                width: 40%;
+                width: 45%;
             }
             table, th, tr, td {
                 border: 1px solid black
@@ -116,6 +116,7 @@
                 </tbody>
             </table>
         </main>
+        <hr>
         <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
