--- a/paginas/escudo.html
+++ b/paginas/escudo.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>VAI CORINTHIANS</title>
         <style>
+            h2{
+                color:darkred
+            }
             p{
                 font-size:larger
             }
@@ -25,11 +28,12 @@
                 <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
                 <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
             </nav>
-            <hr>
             <section>
+                <hr>
                 <h1>ESCUDOS</h1>
                 <hr>
                 <p>A história do escudo do Corinthians começa muito antes dele sequer existir e é completamente ligada às raízes do clube. Isso porque, apesar de ter sido fundado em 1º de setembro de 1910, o Corinthians ficou sem um símbolo por três anos. Durante todo esse tempo, era entendido que o time, formado por trabalhadores, era de várzea e não se enquadrava nos padrões de uma equipe de elite no Brasil.</p>
+                <hr>
                 <article>
                     <h2>1913</h2>
                     <h3>Primeiro escudo</h3>
@@ -77,11 +81,11 @@
                     <h2>1990</h2>
                     <h3>Estrelas</h3>
                     <p>O Corinthians adicionou estrelas no escudo desde a primeira conquista do Campeonato Brasileiro, em 1990. Aconteceu o mesmo com o Mundial, que virou uma estrela maior, acima das outras. Foi então que, no dia 26 de outubro de 2011, o clube anunciou a retirada das estrelas sob o argumento de que todos os títulos são especiais. Desde então, o escudo do Timão segue o mesmo.</p>
-                    <img src="../Imagens/escudos_1990.jpg" title="1990" alt="escudo1990" width="350">
+                    <img src="../Imagens/escudos_1990.jpg" title="1990" alt="escudo1990" width="270">
                 </article>
-                <hr>
             </section>
         </main>
+        <hr>
         <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
