--- a/paginas/idolos1.html
+++ b/paginas/idolos1.html
@@ -1,96 +1,95 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Ídolos</title>
-    
-        <style>
-            p {
-                font-size:larger
-            }
-            ul {
-                font-size:larger
-            }
-        </style>
-    </head>
-    <body>
-        <header>    
-            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-            <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
-        </header>
-        <nav>
-            ||  <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
-        </nav>
-        <main>
-            
-            <section>
-                <article>
-                    <hr>
-                    <h2>MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
-                    <hr>
-                    <h2 style="color:#cd0000;">"Gigante" Cássio</h2>
-                    <img src="../Imagens/cassio.jpg" title="cassio" alt="nao carregou" width="350">
-                    <p>Cássio Roberto Ramos começou sua carreira na base do Grêmio e passou pelo PSV antes de chegar no Corinthians no final de 2011. Seu apelido de "Gigante" não é à toa, já que, desde que chegou é um dos jogadores mais decisivos nesses 12 anos de casa.</p>
-                    <p>Seus maiores momentos de glória foram em 2012, nesse ano foi peça fundamental para a conquista do tão cobiçado título inédito da Libertadores, onde fez sua defesa mais famosa no chute de Diego Souza contra o Vasco na semi-final da Libertadores, defesa essa, que se não tivesse ocorrido mudaria totalmente a história do Corinthians nos anos seguintes. Posteriormente, após a vitória contra o Chelsea da Inglaterra, se consagrou como melhor jogador da competição, que consagrou o Timão como bicampeão do Mundial de Clubes.</p> 
-                    <p>Em julho de 2022, se tornou o goleiro que mais vezes vestiu a camisa do Corinthians e em agosto de 2022, se tornou o 2º jogador com mais jogos na história do clube, tornando-se assim, o maior goleiro da história do clube e para muitos torcedores o maior jogador do Corinthians nesses 113 anos de glória.</p>
-                    <ul>
-                        <h4>Títulos:</h4>
-                        <li>Campeonato brasileiro = 2</li>
-                        <li>Campeonato Paulista = 4</li>
-                        <li>Libertadores = 1</li>
-                        <li>Mundial = 1</li>
-                        <li>Recopa = 1</li>
-                    </ul>
-                    <hr>
-                </article>
-                <article>
-                    <h2 style="color: #cd0000;">"Doutor" Sócrates</h2>
-                    <img src="../Imagens/socrates.jpg" title="socrates" alt="nao carregou" width="350">
-                    <p>Sócrates Brasileiro Sampaio de Souza Vieira de Oliveira, conhecido como "Doutor" Sócrates, devido sua forma inteligente e elegante que jogava, além do fato de ser formado em medicina, foi um dos maiores e mais importantes jogadores brasileiros da história. </p>
-                    <p>Era chamado de craque por causa de sua técnica e  visão de jogo, além de sua genialidade de dar passes de calcanhar como ninguém. Constantemente convocado pela seleção brasileira, atuou no Corinthians entre 1978-1984, onde conquistou 3 títulos Paulistas e ficou muitíssimo marcado pela sua icônica comemoração, onde erguia o punho para o alto, porém sua importância histórica vai muito além dos gramados.</p> 
-                    <p>Sócrates foi porta-voz de um dos marcos mais célebres da história do clube, a Democracia Corinthiana, tal marco foi revolucionário no futebol brasileiro, onde os jogadores participavam ativamente das decisões políticas de seus clubes, além de, se manifestarem a favor da redemocratização do país em plena ditadura.</p>
-                    <p>“Eu quero morrer num domingo, num dia em que o Corinthians ganhe um título”, disse o Doutor certa vez, e em  4 de setembro de 2011 sua profecia foi concretizada. Na madrugada desse dia, devido sua vida de excessos, principalmente com o álcool e cigarros, morre Sócrates. Mais tarde nesse dia, após uma partida contra seu rival Palmeiras, o Corinthians se consagra campeão Brasileiro daquele ano, e Sócrates pôde, enfim, descansar em paz.</p>
-                    <ul>
-                        <h4>Títulos:</h4>
-                        <li>Campeonato Paulista = 3</li>
-                        <li>Taça Cidade de Porto Alegre = 1</li>
-                        <li>Troféu Internacional Feira de Hidalgo = 1</li>
-                    </ul>
-                    <hr>
-                </article>
-                <article>
-                    <h2 style="color: #cd0000;">PÉ DE ANJO</h2>
-                    <img src="../Imagens/marcelinho.jpeg" alt="nao carrregou" title="marcelinho" width="350">
-                    <p>"Quero marcar minha passagem aqui. Vim para o Corinthians para ser campeão!". Essas foram as palavras de Marcelinho Carioca quando chegou no Corinthians, com 23 anos e calçando 35. Tal frase que se tornou um fato, já que, Marcelinho é um dos jogadores mais vitoriosos do Corinthians com 10 títulos.</p>
-                    <p>Considerado um dos brasileiros que mais dominava a arte de cobrar faltas, seu primeiro e centésimo gols no Timão foram de bola parada. Também ficou famoso pelos gols marcados em momentos decisivos, como quando fez 2 gols contra o Grêmio na final da Copa do Brasil de 1995.</p>
-                    <p>O Pé de Anjo possui 433 jogos com a camisa alvinegra, além de ser o quinto jogador que mais balançou as redes na história do clube, com 206 gols.</p>
-                    <ul>
-                        <h4>Títulos:</h4>
-                        <li>Campeonato brasileiro = 2</li>
-                        <li>Campeonato Paulista = 4</li>
-                        <li>Copa do Brasil = 1</li>
-                        <li>Mundial = 1</li>
-                        <li>Copa Bandeirantes = 1</li>
-                    </ul>
-                    <hr>
-                </article>
-                <article>
-                    <ul>
-                        <h2 style="color:#cd0000">MENÇÕES HONROSAS</h2>
-                        <li ><scan  style="color:darkred">Craque Neto -</scan> Importantíssimo na conquista do primeiro Campeonato Brasileiro em 1990, ficou marcado pela sua habilidade e facilidade em cobrar faltas.</li>
-                        <li><scan style="color:darkred">Casa Grande -</scan> Marcado pela sua raça dentro de campo e pela sua participação ativa na Democracia Corinthiana.</li>
-                        <li><scan  style="color:darkred">Wladimir -</scan> Possui 806 partidas, sendo assim, o jogador que mais vezes vestiu a camisa do Corinthians,</li>
-                    </ul>
-                </article>
-            </section>
-       </main>
-       <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>VAI CORINTHIANS</title>
+    <style>
+        p {
+            font-size:larger
+        }
+        ul {
+            font-size:larger
+        }
+    </style>
+</head>
+<body>
+    <header>    
+        <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+        <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+        <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+    </header>
+    <nav>
+        ||  <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
+            <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
+            <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+            <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+    </nav>
+    <main>
+    <hr>
+    <section>
+            <h2>MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
+            <hr>
+            <article>
+                <h2 style="color:#cd0000;">"Gigante" Cássio</h2>
+                <img src="../Imagens/cassio.jpg" title="cassio" alt="nao carregou" width="350">
+                <p>Cássio Roberto Ramos começou sua carreira na base do Grêmio e passou pelo PSV antes de chegar no Corinthians no final de 2011. Seu apelido de "Gigante" não é à toa, já que, desde que chegou é um dos jogadores mais decisivos nesses 12 anos de casa.</p>
+                <p>Seus maiores momentos de glória foram em 2012, nesse ano foi peça fundamental para a conquista do tão cobiçado título inédito da Libertadores, onde fez sua defesa mais famosa no chute de Diego Souza contra o Vasco na semi-final da Libertadores, defesa essa, que se não tivesse ocorrido mudaria totalmente a história do Corinthians nos anos seguintes. Posteriormente, após a vitória contra o Chelsea da Inglaterra, se consagrou como melhor jogador da competição, que consagrou o Timão como bicampeão do Mundial de Clubes.</p> 
+                <p>Em julho de 2022, se tornou o goleiro que mais vezes vestiu a camisa do Corinthians e em agosto de 2022, se tornou o 2º jogador com mais jogos na história do clube, tornando-se assim, o maior goleiro da história do clube e para muitos torcedores o maior jogador do Corinthians nesses 113 anos de glória.</p>
+                <ul>
+                    <h4>Títulos:</h4>
+                    <li>Campeonato Brasileiro = 2</li>
+                    <li>Campeonato Paulista = 4</li>
+                    <li>Libertadores = 1</li>
+                    <li>Mundial = 1</li>
+                    <li>Recopa = 1</li>
+                </ul>
+        </article>
+        <hr>
+        <article>
+            <h2 style="color: #cd0000;">"Doutor" Sócrates</h2>
+            <img src="../Imagens/socrates.jpg" title="socrates" alt="nao carregou" width="350">
+            <p>Sócrates Brasileiro Sampaio de Souza Vieira de Oliveira, conhecido como "Doutor" Sócrates, devido sua forma inteligente e elegante que jogava, além do fato de ser formado em medicina, foi um dos maiores e mais importantes jogadores brasileiros da história. </p>
+            <p>Era chamado de craque por causa de sua técnica e  visão de jogo, além de sua genialidade de dar passes de calcanhar como ninguém. Constantemente, convocado pela seleção brasileira, atuou no Corinthians entre 1978-1984, onde conquistou 3 títulos Paulistas e ficou muitíssimo marcado pela sua icônica comemoração, onde erguia o punho para o alto, porém sua importância histórica vai muito além dos gramados.</p> 
+            <p>Sócrates foi porta-voz de um dos marcos mais célebres da história do clube, a Democracia Corinthiana, tal marco foi revolucionário no futebol brasileiro, onde os jogadores participavam ativamente das decisões políticas de seus clubes, além de, se manifestarem a favor da redemocratização do país em plena ditadura.</p>
+            <p>“Eu quero morrer num domingo, num dia em que o Corinthians ganhe um título”, disse o Doutor certa vez, e em  4 de setembro de 2011 sua profecia foi concretizada. Na madrugada desse dia, devido sua vida de excessos, principalmente com o álcool e cigarros, morre Sócrates. Mais tarde nesse dia, após uma partida contra seu rival Palmeiras, o Corinthians se consagra campeão Brasileiro daquele ano, e Sócrates pôde, enfim, descansar em paz.</p>
+            <ul>
+                <h4>Títulos:</h4>
+                <li>Campeonato Paulista = 3</li>
+                <li>Taça Cidade de Porto Alegre = 1</li>
+                <li>Troféu Internacional Feira de Hidalgo = 1</li>
+            </ul>
+        </article>
+        <hr>
+        <article>
+            <h2 style="color: #cd0000;">PÉ DE ANJO</h2>
+            <img src="../Imagens/marcelinho.jpeg" alt="nao carrregou" title="marcelinho" width="350">
+            <p>"Quero marcar minha passagem aqui. Vim para o Corinthians para ser campeão!". Essas foram as palavras de Marcelinho Carioca quando chegou no Corinthians, com 23 anos e calçando 35. Tal frase que se tornou um fato, já que, Marcelinho é um dos jogadores mais vitoriosos do Corinthians com 10 títulos.</p>
+            <p>Considerado um dos brasileiros que mais dominava a arte de cobrar faltas, seu primeiro e centésimo gols no Timão foram de bola parada. Também ficou famoso pelos gols marcados em momentos decisivos, como quando fez 2 gols contra o Grêmio na final da Copa do Brasil de 1995.</p>
+            <p>O Pé de Anjo possui 433 jogos com a camisa alvinegra, além de ser o quinto jogador que mais balançou as redes na história do clube, com 206 gols.</p>
+            <ul>
+                <h4>Títulos:</h4>
+                <li>Campeonato brasileiro = 2</li>
+                <li>Campeonato Paulista = 4</li>
+                <li>Copa do Brasil = 1</li>
+                <li>Mundial = 1</li>
+                <li>Copa Bandeirantes = 1</li>
+            </ul>
+        </article>
+        <hr>
+        <article>
+            <ul>
+                <h2 style="color:#cd0000">MENÇÕES HONROSAS</h2>
+                <li ><scan  style="color:darkred">Craque Neto -</scan> Importantíssimo na conquista do primeiro Campeonato Brasileiro em 1990, ficou marcado pela sua habilidade e facilidade em cobrar faltas.</li>
+                <li><scan style="color:darkred">Casa Grande -</scan> Marcado pela sua raça dentro de campo e pela sua participação ativa na Democracia Corinthiana.</li>
+                <li><scan  style="color:darkred">Wladimir -</scan> Possui 806 partidas, sendo assim, o jogador que mais vezes vestiu a camisa do Corinthians,</li>
+            </ul>
+        </article>
+    </section>
+    <hr>
+    </main>
+    <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
+</body>
 </html>
