--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -45,10 +45,12 @@
                         <label for="birthday">Nascimento</label>
                         <input type="date" name="birthday" id="birthday" min="2000-01-01" max="2023-12-12"><br>
                         <button>Enviar</button>
+                        <p></p>
                     </form>
                 </article>
             </section>
         </main>
+        <hr>
         <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
